Remove overflow:auto from overview-section, fixes clipped text on ipad.

--- a/client/css/entry.scss
+++ b/client/css/entry.scss
@@ -75,7 +75,6 @@ $header-landscape-footer-height-mobile: 40px;
 	}
 
 	.overview-section {
-		overflow: auto;
 		margin-top: 12px !important;
 
 		> div {
